feat: major v1.1.0 update with all improvements
- Add automatic setup script with hardware detection
- Improve install.sh with multi-distro support and full dependency verification
- Update webcam-tray with XDG compliance, logging, PID validation, and toggle command
- Add GUI configuration tool (configure-gui.sh)
- Create PKGBUILD for AUR packaging
- Add GitHub Actions for CI/CD and automated releases
- Include manpage (webcam-tray.1)
- Add automated tests with bats
- Create comprehensive documentation (CHANGELOG, CONTRIBUTING)
- Improve .gitignore for build artifacts and runtime files

All 24 proposed improvements implemented:
✅ Auto-detect hardware and generate service
✅ Complete dependency verification
✅ XDG Base Directory compliance
✅ PID validation and security improvements
✅ Structured logging with systemd journal
✅ Configuration file support
✅ GUI configuration wizard
✅ AUR package (PKGBUILD)
✅ CI/CD with GitHub Actions
✅ Automated tests and ShellCheck integration

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,27 @@
 *~
 *.bak
 .DS_Store
+
+# Build artifacts
+*.tar.gz
+*.zip
+pkg/
+src/
+
+# Test artifacts
+tests/*.log
+tests/tmp/
+
+# Runtime files (should not be committed)
+*.pid
+*.pipe
+
+# User configuration (examples are OK, actual configs are not)
+config
+!*.example
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
