Fix: v4l2loopback-dkms instalación opcional en CI
El módulo v4l2loopback-dkms falla al compilar en CI porque:
- Ubuntu: Kernel Azure sin headers compatibles
- Arch: Containers sin acceso completo al kernel

Cambios:
- Instalación separada de v4l2loopback-dkms con fallback
- No falla el workflow si el módulo no compila
- Los tests pueden continuar sin el módulo (esperado en CI)

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -24,7 +24,9 @@ jobs:
           pacman -Syu --noconfirm
           pacman -S --noconfirm base-devel git yad zenity libnotify \
             gstreamer gst-plugins-base gst-plugins-good \
-            v4l2loopback-dkms v4l-utils linux-headers sudo bc
+            v4l-utils linux-headers sudo bc
+          # v4l2loopback-dkms puede fallar en containers
+          pacman -S --noconfirm v4l2loopback-dkms || echo "v4l2loopback-dkms installation failed (expected in container)"
       
       - name: Load v4l2loopback module
         run: |
@@ -69,7 +71,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y yad zenity libnotify-bin \
             gstreamer1.0-tools gstreamer1.0-plugins-base gstreamer1.0-plugins-good \
-            v4l2loopback-dkms v4l-utils bc
+            v4l-utils bc
+          # v4l2loopback-dkms puede fallar en CI sin kernel headers correctos
+          sudo apt-get install -y v4l2loopback-dkms || echo "v4l2loopback-dkms installation failed (expected in CI)"
       
       - name: Load v4l2loopback
         run: |
